--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 # Self-descriptive entries which should always be present
 # https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
 [project]
-name = "openenm"
+name = "enmt"
 description = "A short description of the project"
 dynamic = ["version"]
 readme = "README.md"
@@ -18,7 +18,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
 ]
-requires-python = ">=3.8.0,<3.11.0"
+requires-python = ">=3.10.0,<3.13.0"
 # Declare any run-time dependencies that should be installed with the package.
 dependencies = [
     "numpy",
@@ -32,8 +32,8 @@ dependencies = [
 
 # Update the urls once the hosting is set up.
 [project.urls]
-"Source" = "https://github.com/uibcdf/OpenENM/"
-"Documentation" = "https://uibcdf.org/OpenENM"
+"Source" = "https://github.com/uibcdf/enmt/"
+"Documentation" = "https://uibcdf.org/enmt"
 
 [project.optional-dependencies]
 test = [
@@ -88,7 +88,7 @@ match = ["*"]
 default-tag = "0.0.0"
 
 [tool.versioningit.write]
-file = "openenm/_version.py"
+file = "enmt/_version.py"
 
 #[tool.flit.external-data]
 #directory = "data"
