--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -9,4 +9,4 @@ path_classifiers:
     - versioneer.py  # Set Versioneer.py to an external "library" (3rd party code)
     - devtools/*
   generated:
-    - opengnm/_version.py
+    - enmt/_version.py
