--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ omit =
     # Omit the tests
     */tests/*
     # Omit generated versioneer
-    opengnm/_version.py
+    enmt/_version.py
 
 [yapf]
 # YAPF, in .style.yapf files this shows up as "[style]" header
@@ -22,8 +22,8 @@ max-line-length = 119
 # Automatic version numbering scheme
 VCS = git
 style = pep440
-versionfile_source = opengnm/_version.py
-versionfile_build = opengnm/_version.py
+versionfile_source = enmt/_version.py
+versionfile_build = enmt/_version.py
 tag_prefix = ''
 
 [aliases]
