First doc implementation

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,8 +2,10 @@
 
 [run]
 branch = True
-source = enmt
+source = elastnetmt
 
 [report]
 show_missing = True
-omit =
+#omit =
+#    molsysmt/form/**
+
