--- a/devtools/conda-envs/development_env.yaml
+++ b/devtools/conda-envs/development_env.yaml
@@ -1,7 +1,6 @@
 channels:
 - uibcdf
 - conda-forge
-- defaults
 dependencies:
 - python
 - pip
@@ -15,13 +14,18 @@ dependencies:
 - lindelint
 - pytest
 - pytest-cov
+- pytest-xdist
 - codecov
-- sphinx
-- sphinx_rtd_theme
-- sphinxcontrib-bibtex
-- sphinx-remove-toctrees
-- sphinx-copybutton
-- myst-nb
 - jupyterlab
-- pyyaml
+- sphinx
+- pydata-sphinx-theme
+- sphinx-remove-toctrees
+- sphinxcontrib-bibtex
+- sphinx-copybutton
+- sphinx-design
+- sphinx-favicon
+- sphinx-tabs
+- myst-nb
+- seaborn
+- nbsphinx
 - mamba
