--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,10 +1,15 @@
 # Codecov configuration to make it a bit less noisy
+
 coverage:
   status:
     patch: false
     project:
       default:
         threshold: 50%
+  range: 50...80
+  round: down
+  precision: 2
+
 comment:
   layout: "header"
   require_changes: false
@@ -12,3 +17,7 @@ comment:
   behavior: default
   flags: null
   paths: null
+
+#ignore:
+#  - "elastnet/form/**"
+
