--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,7 +6,7 @@ export SPHINXWORKING=True
 # You can set these variables from the command line.
 SPHINXOPTS    = -j auto
 SPHINXBUILD   = sphinx-build
-SPHINXPROJ    = openenm
+SPHINXPROJ    = enmt
 SOURCEDIR     = .
 BUILDDIR      = _build
 
