--- a/devtools/conda-build/meta.yaml
+++ b/devtools/conda-build/meta.yaml
@@ -1,5 +1,5 @@
 package:
-  name: enmt
+  name: elasnetmt
   version: "{{ environ['GIT_DESCRIBE_TAG'] }}"
 source:
   path: ../../
@@ -29,5 +29,5 @@ about:
   description: 'This library...
 
     '
-  dev_url: https://github.com/uibcdf/enmt
-  doc_url: https://uibcdf.org/enmt
+  dev_url: https://github.com/uibcdf/elasnetmt
+  doc_url: https://uibcdf.org/elasnetmt
